# attest

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml
.github/workflows/: ci-engine.yml  ci-sdk-python.yml  ci-sdk-typescript.yml  docs.yml
docs/guides/: framework-adapters.md  multi-agent.md
engine/: go.mod  go.sum
engine/cmd/attest-engine/: main.go
engine/internal/: integration_test.go
engine/internal/assertion/: constraint.go  constraint_test.go  content.go  content_test.go  evaluator.go  evaluator_test.go  judge_eval.go  pipeline.go  pipeline_integration_test.go  pipeline_test.go  schema.go  schema_test.go  score.go  target.go  trace_check.go  trace_check_test.go
engine/internal/assertion/judge/: rubric.go  rubric_test.go
engine/internal/cache/: judge.go
engine/internal/llm/: openai.go  provider.go  ratelimiter.go
engine/internal/report/: json.go  junit.go  report_test.go
engine/internal/server/: handler.go  server.go  server_test.go  session.go
engine/internal/trace/: validate.go  validate_test.go
examples/llamaindex-agent/: agent.py  pyproject.toml
examples/quickstart/: README.md  pyproject.toml
examples/semantic-similarity/: pyproject.toml
proto/attest/v1/: protocol-spec.md
sdks/python/: README.md  pyproject.toml
sdks/python/tests/: conftest.py  test_cli.py  test_cli_cache.py  test_engine_manager.py  test_expect.py  test_expect_l5_l6.py  test_simulation.py  test_tier_and_plugin.py  test_trace_tree.py  test_version.py
sdks/typescript/: package.json  pnpm-lock.yaml  tsconfig.base.json
(+50 files in other folders)
