[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attest-llamaindex-example"
version = "0.1.0"
description = "Attest LlamaIndex RAG agent example"
requires-python = ">=3.10"

dependencies = [
    "attest-ai[llamaindex]>=0.3.0",
    "llama-index>=0.10.20",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
