[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attest-quickstart"
version = "0.1.0"
description = "Attest quickstart example"
requires-python = ">=3.10"

dependencies = [
    "attest-ai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
